# aslp

./: .gitattributes  .gitignore  CHANGES.md  Dockerfile  Makefile  README.md  TODO.md  TODO.txt  _tags  a  a.out  aa  asl.ott  asl.xml  asl_utils.ml  asl_visitor.ml  asli  asli.ml  asli.nix  asli.opam  aslp.nix  cntlm.bir  coverage.sh  d.diff  decl.go  decl.prj  default.nix  dune  dune-project  elf.ml  eval.ml  get_opcode.sh  load_asl.ml  load_asl.mli  offline-build.sh  offline-coverage.sh  opcodes.txt  prelude.asl  primops.ml  shell.nix  (+6 more)
.github/workflows/: opam.yml  test.yml
.local/share/org.kde.syntax-highlighting/syntax/: asl.xml
aslp-cpp/: .gitignore  BUILDING.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  update-deps.sh
aslp-cpp/.github/workflows/: ci.yml
aslp-cpp/cmake/: install-config.cmake  install-rules.cmake  variables.cmake
aslp-cpp/example/: CMakeLists.txt
aslp-cpp/include/aslp-cpp/: aslp-cpp.hpp
aslp-cpp/source/: aslp-cpp.cpp
aslp-cpp/test/: CMakeLists.txt
aslp-cpp/test/source/: aslp-cpp_test.cpp
libASL/: Semantics.g4  asl.ott  asl_utils.ml  asl_visitor.ml  call_graph.ml  cpu.ml  cpu.mli  decoder_program.ml  dis.ml  dis_tc.ml  dune  eval.ml  loadASL.ml  loadASL.mli  load_asl.ml  load_asl.mli  monad.ml  ocaml_backend.ml  offline_opt.ml  offline_transform.ml  primops.ml  req_analysis.ml  rws.ml  symbolic.ml  symbolic_lifter.ml  tcheck.ml  testing.ml  transforms.ml  transforms0.ml  utils.ml  value.ml
mra_tools/arch/: arch.asl  arch_instrs.asl  regs.asl  regs_access.asl
mra_tools/support/: stubs.asl
offlineASL/: dune  offline.ml  utils.ml
output/: coverage.ml  dune  gen_prelude.ml  offline.ml  sem.ml  utils.ml
scripts/: bap_mc_coverage.sh  bap_mc_single.sh  build_a64_plugin.sh  lint.py  package_asli.sh  show_opcodes.sh  test_cntlm.sh
tests/: dune  impdef.prj  instructions.txt  instructions_short.txt  override.asl  override.prj  test.asl  test_asl.ml
tests/aslt/: cntlm-isns.txt  cntlm-ops.txt  cntlm-readme.md  dune  ops.txt  test_antlr.t  test_dis.t
tests/coverage/: aarch64_branch  aarch64_branch___  aarch64_float____  aarch64_integer___  aarch64_memory____general___  aarch64_memory_atomicops____  aarch64_memory_single_general___  aarch64_vector_arithmetic_binary____int___  aarch64_vector_arithmetic_unary_______fp_float___  aarch64_vector_arithmetic_unary___not__rbit__rev__shift__cnt__clsz___  dune  off_run.sh  run.sh
