(ocamllex lexer)

(menhir
 (modules asl_parser))

(library
 (name libASL)
 (public_name asli.libASL)
 (flags
  (:standard -w -27))
 (modules asl_ast asl_parser asl_parser_pp asl_utils asl_visitor elf eval
   lexer lexersupport load_asl primops tcheck utils value visitor)
 (libraries pprint zarith z3))
