(library
  (name offlineASL)
  (public_name asli.offlineASL)
  (flags
    (:standard -w -27 -cclib -lstdc++))
  (modules offline gen_prelude)
  (libraries zarith libASL))

(executable
 (name coverage)
 (public_name offline-coverage)
 (modes exe byte)
 (modules coverage)
 (flags (-cclib -lstdc++))
 (libraries libASL offlineASL))

(executable
 (name sem)
 (public_name offline-sem)
 (modes exe byte)
 (modules sem)
 (flags (-cclib -lstdc++))
 (libraries libASL offlineASL))



