; INSTRUCTION_GROUPS+='aarch64_integer.+'
; INSTRUCTION_GROUPS+=' aarch64_branch.+'
; INSTRUCTION_GROUPS+=' aarch64_float_.+'
; INSTRUCTION_GROUPS+=' aarch64_vector_.+'
; INSTRUCTION_GROUPS+=' aarch64_memory_.+'

(rule
 (target ./encodings)
 (action (run tar xf %{dep:../../encodings.tar.gz})))

(rule
 (deps (package asli) ./encodings)
 (action (copy ./run.sh ./run)))

(rule (with-stdout-to cov_integer (run ./run "aarch64_integer.+")))
(rule (with-stdout-to cov_branch  (run ./run "aarch64_branch.+")))
(rule (with-stdout-to cov_float   (run ./run "aarch64_float_.+")))
(rule (with-stdout-to cov_vector1 (run ./run "aarch64_vector_arithmetic_binary.+")))
(rule (with-stdout-to cov_vector2 (run ./run "aarch64_vector_(?!arithmetic_binary).+")))
(rule (with-stdout-to cov_memory  (run ./run "aarch64_memory_.+")))

(rule (alias coverage) (action (diff ./aarch64_integer cov_integer)))
(rule (alias coverage) (action (diff ./aarch64_branch cov_branch)))
(rule (alias coverage) (action (diff ./aarch64_float cov_float)))
(rule (alias coverage) (action (diff ./aarch64_vector1 cov_vector1)))
(rule (alias coverage) (action (diff ./aarch64_vector2 cov_vector2)))
(rule (alias coverage) (action (diff ./aarch64_memory cov_memory)))
   
